fix: horizontal scrollbar always visible on Windows in code samples (#500)
Fixes the code sample tabs always showing a horizontal scrollbar for Windows users.

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/shared/example-viewer/_example-viewer-theme.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/shared/example-viewer/_example-viewer-theme.scss
@@ -7,14 +7,14 @@
 
   example-viewer {
     .docs-example-viewer-wrapper {
-      border: 1px solid rgba(mat-color($foreground, secondary-text), .03);
-      box-shadow: 0 2px 2px rgba(0,0,0,0.24), 0 0 2px rgba(0,0,0,0.12);
+      border: 1px solid rgba(mat-color($foreground, secondary-text), 0.03);
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
       margin: 4px;
     }
 
     .docs-example-viewer-title {
       color: mat-color($foreground, secondary-text);
-      background: rgba(mat-color($foreground, secondary-text), .03);
+      background: rgba(mat-color($foreground, secondary-text), 0.03);
     }
 
     .docs-example-source-copy {
@@ -29,7 +29,7 @@
 
     .docs-example-source {
       border-bottom: 1px solid mat-color($foreground, divider);
-      overflow-x: scroll;
+      overflow: auto;
     }
   }
 }
